feat: allow ideal mac computation

--- a/recap_agr/templates/index.html
+++ b/recap_agr/templates/index.html
@@ -229,6 +229,14 @@
 							 config["perform_mac"] %}checked{% endif %}> Perform Pre-Filtering (MAC)
 						</label>
 					</div>
+					
+					<div class="form-check">
+						<label class="form-check-label">
+							<input type="checkbox" class="form-check-input" name="ideal-mac" id="ideal-mac"
+								value="1" {% if
+							 config["ideal_mac"] %}checked{% endif %}> Ideal Pre-Filtering (MAC)
+						</label>
+					</div>
 
 					<div class="form-check">
 						<label class="form-check-label">
